PEI First Prototype.cydsn/BUILD.log
--------------- Build Started: 11/29/2022 19:31:22 Project: PEI First Prototype, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\Justin Chang\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\Justin Chang\PEI-Firmware-FE10\PEI First Prototype.cydsn\PEI First Prototype.cyprj" -d CY8C5868AXI-LP035 -s "C:\Users\Justin Chang\PEI-Firmware-FE10\PEI First Prototype.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c:39:1: error: unknown type name 'State'
 State   equals User4
 ^
main.c:39:16: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'User4'
 State   equals User4
                ^
main.c: In function 'initialization':
main.c:58:5: error: expected ',' or ';' before 'int'
     int Count_High = 0
     ^
main.c:65:5: warning: 'main' is normally a non-static function [-Wmain]
 int main(void)
     ^
main.c: In function 'main':
main.c:72:35: error: 'current' undeclared (first use in this function)
     canCurrentData.frame1.data0 = current >> 8; // upper bits
                                   ^
main.c:72:35: note: each undeclared identifier is reported only once for each function it appears in
main.c:74:35: error: 'shutdown_flags' undeclared (first use in this function)
     canCurrentData.frame1.data2 = shutdown_flags;
                                   ^
main.c:77:5: warning: implicit declaration of function 'CAN_transmit' [-Wimplicit-function-declaration]
     CAN_transmit(&canCurrentData);
     ^
main.c:79:5: error: 'CyGlobalIntEnable' undeclared (first use in this function)
     CyGlobalIntEnable; /* Enable global interrupts. */
     ^
main.c:113:13: warning: implicit declaration of function 'Clear_interlock' [-Wimplicit-function-declaration]
             Clear_interlock();
             ^
main.c:123:54: error: expected ')' before 'or'
             if (throttle_high*255 + throttle_low < 0 or throttle_high*255 + throttle_low > 32767) {
                                                      ^
main.c:100:9: warning: unused variable 'DisplayState' [-Wunused-variable]
     int DisplayState = 1;
         ^
main.c:92:9: warning: variable 'e_stop' set but not used [-Wunused-but-set-variable]
     int e_stop = 0;
         ^
main.c:89:9: warning: unused variable 'VCL_Brake' [-Wunused-variable]
     int VCL_Brake = 0;
         ^
main.c:86:9: warning: variable 'VCL_Throttle' set but not used [-Wunused-but-set-variable]
     int VCL_Throttle = 0;
         ^
main.c: In function 'initialization':
main.c:155:1: error: expected declaration or statement at end of input
 }
 ^
main.c:57:9: warning: unused variable 'Count_Low' [-Wunused-variable]
     int Count_Low = 0
         ^
main.c:56:9: warning: unused variable 'DisplayState' [-Wunused-variable]
     int DisplayState = 1;
         ^
main.c:55:9: warning: unused variable 'state' [-Wunused-variable]
     int state = 0;
         ^
main.c:54:9: warning: unused variable 'VCL_Brake' [-Wunused-variable]
     int VCL_Brake = 0;
         ^
main.c:53:9: warning: unused variable 'VCL_Throttle' [-Wunused-variable]
     int VCL_Throttle = 0;
         ^
main.c:52:9: warning: unused variable 'SetInterlock' [-Wunused-variable]
     int SetInterlock = 0;
         ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 11/29/2022 19:31:37 ---------------
